--- a/Education.html
+++ b/Education.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('https://fetzerwood.com/oak/files/projects/mandarin-oriental-las-vegas/cover.jpg')">
+        <header class="masthead" style="background-image: url('Images/BYUwallpaper.png')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -61,6 +61,13 @@
                                 <ul>
                                     <li>2020-2024</li>
                                     <li>Bachelor of science in the business marketing program</li>
+                                </ul>
+                            </li>
+                            <li>
+                                Murray Highschool
+                                <ul>
+                                    <li>2016-2018</li>
+                                    <li>Highschool Diploma</li>
                                 </ul>
                             </li>
                         </ol>
