--- a/Experience.html
+++ b/Experience.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('https://fetzerwood.com/oak/files/projects/four-seasons-palo-alto/cover.jpg')">
+        <header class="masthead" style="background-image: url('Images/Fetzer-Canyon-panels\ .jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -54,9 +54,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p>Every summer during my teenage life I worked for my father's company, Fetzer Architectural Woodworking, as a normal shop worker. I made tables and helped with electrical wiring. </p>
+                        <p>When I turned 18 and graduated from highschool I decided to serve as missionary for the Church of Jesus Christ of latter-day saints. I spent two years in Lima, Peru teaching people about Jesus Christ. </p>
+                        <p>Since I've been home from my mission, I've been working part time for the same company as an estimator on the sales team.</p>
                     </div>
                 </div>
             </div>
