--- a/Skills.html
+++ b/Skills.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('https://fetzerwood.com/oak/files/projects/conference-center/conference-1.jpg')">
+        <header class="masthead" style="background-image: url('Images/BABYNATE.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -57,9 +57,9 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+                        <p>   Database design and development, Entity relationship diagramming, Structured query language, (SQL) ,VBA Programming, On Screen Take-Off (Material Take-Off), Excell Solver, pivot tables, and Charts, Flowchart diagramming, Html, CSS, Bootstrap programming, Tableau Data management </p>
+                        <p>   As an estimator for Fetzer Architectural woodworking, I learned to be profiecient in using the on screen take-off application as well as bluebeam. I also learned how to price various processes of the woodworking shop based on labor hours. </p>
+                        <p>   As a missionary for the Church of Jesus Christ of latter-day saints, I learned to work with fellow missionaries and to be a leader. I became fluent in spanish and can communicate easily with people from many walks of life. </p>
                     </div>
                 </div>
             </div>
