--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+<!--Nathan Fetzer Last Edited 12/15/21-->
 <html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Nathan Fetzer - Student, Estimator, Hockey player, Disciple of Christ</title>
+        <title style="text-decoration: underline;">Nathan Fetzer - Student, Estimator, Hockey player, Disciple of Christ</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
@@ -15,6 +16,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="Styles/styles.css" rel="stylesheet" />
         <link href="Styles/myStyles.css" rel="stylesheet" />
+
     </head>
     <body>
         <!-- Navigation-->
@@ -28,22 +30,27 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="Education.html">Education</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="Experience.html">Experience</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="Skills.html">Skills</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="HTML/Education.html">Education</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="HTML/Experience.html">Experience</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="HTML/Skills.html">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="HTML/Tableau.Html">Tableau</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="HTML/AboutMe.Html">About Me</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="HTML/contact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('Images/MontanaState.JPG')">
+        <header class="masthead" style="background-image: url('Images/MontanaState.JPG')" alt="Picture of Nathan Fetzer playing hockey at montana state">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
                             <h1>Nathan Fetzer</h1>
-                            <span class="subheading">Hockey player, Student, Estimator, Disciple of Christ</span>
+                            <span class="subheading" style="text-decoration: underline;" style="color: royalblue;">Hockey player, Student, Estimator, Disciple of Christ</span>
+                            <div>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/VguFQKg70uw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -130,5 +137,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <a href="#top">Back to top</a>
     </body>
 </html>
